# inVAE

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish_mkdocs.yaml  tests.yml
notebooks/: eda.ipynb
src/invae/: cli.py  config.py  dataloader.py  dataset.py  main.py  mlflow_utils.py  plots.py  trainer.py  vae.py
src/invae/scripts/: inference.py  main.py  train.py
